Adds HttpSender to aid proper handling of HttpEndpointSupplier
Signed-off-by: Adrian Cole <adrian@tetrate.io>